feat: add header, nav, main, and footer tags

--- a/media.html
+++ b/media.html
@@ -6,6 +6,23 @@
     <title>Media</title>
 </head>
 <body>
-    
+    <header>
+        <h1>HTML 01</h1>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="aboutme.html">Resume</a></li>
+                <li><a href="schedule.html">Schedule</a></li>
+                <li><a href="media.html">Media</a></li>
+                <li><a href="random.html">Random</a></li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+
+    </main>
+    <footer>
+        
+    </footer>
 </body>
 </html>
