feat: finish home and resume

--- a/aboutme.html
+++ b/aboutme.html
@@ -7,7 +7,6 @@
 </head>
 <body>
     <header>
-        <h1>HTML 01</h1>
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
@@ -19,10 +18,22 @@
         </nav>
     </header>
     <main>
+        <h1>Lorenzo Alfred B. Nery</h1>
+        <p>lorenzo_alfred_b_nery@dlsu.edu.ph</p>
 
+        <h2>Education</h2>
+        <p>De La Salle University</p>
+        <p>Bachelor of Science in Computer Science Major in Software Technology</p>
+
+        <h2>Leadership and Activities</h2>
+        <p>DLSU SPRINT</p>
+        <p>Associate Vice President for Training & Development</p>
+
+        <h2>Skills & Interests</h2>
+        <p>Technical: HTML, CSS, JavaScript, PostgreSQL, Node.js, Express</p>
     </main>
     <footer>
-        
+        <a href="https://github.com/Renzios">Github</a>
     </footer>
 </body>
 </html>
