feat: finish schedule

--- a/schedule.html
+++ b/schedule.html
@@ -7,7 +7,6 @@
 </head>
 <body>
     <header>
-        <h1>HTML 01</h1>
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
@@ -19,10 +18,76 @@
         </nav>
     </header>
     <main>
-
+        <table>
+            <caption>Schedule</caption>
+            <tr>
+                <th></th>
+                <th>Monday</th>
+                <th>Tuesday</th>
+                <th>Wednesday</th>
+                <th>Thursday</th>
+                <th>Friday</th>
+            </tr>
+            <tr>
+                <td>07:30 AM - 09:00 AM</td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+            </tr>
+            <tr>
+                <td>09:15 AM - 10:45 AM</td>
+                <td>CSARCH1</td>
+                <td>CCAPDEV</td>
+                <td></td>
+                <td>CSARCH1</td>
+                <td>CCAPDEV</td>
+            </tr>
+            <tr>
+                <td>11:00 AM - 12:30 PM</td>
+                <td>STALGCM</td>
+                <td>LCFAITH</td>
+                <td></td>
+                <td>STALGCM</td>
+                <td>LCFAITH</td>
+            </tr>
+            <tr>
+                <td>12:45 PM - 02:15 PM</td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+            </tr>
+            <tr>
+                <td>02:30 PM - 04:00 PM</td>
+                <td>GEUSELF</td>
+                <td>ST-MATH</td>
+                <td></td>
+                <td>GEUSELF</td>
+                <td>ST-MATH</td>
+            </tr>
+            <tr>
+                <td>04:15 PM - 05:45 PM</td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+            </tr>
+            <tr>
+                <td>06:00 PM - 07:30 PM</td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+            </tr>
+        </table>
     </main>
     <footer>
-        
+        <a href="https://github.com/Renzios">Github</a>
     </footer>
 </body>
 </html>
