--- a/random.html
+++ b/random.html
@@ -7,7 +7,6 @@
 </head>
 <body>
     <header>
-        <h1>HTML 01</h1>
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
@@ -22,7 +21,7 @@
 
     </main>
     <footer>
-        
+        <a href="https://github.com/Renzios">Github</a>
     </footer>
 </body>
 </html>
