--- a/media.html
+++ b/media.html
@@ -18,7 +18,8 @@
         </nav>
     </header>
     <main>
-
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/3BFTio5296w?si=-35e67YxKalF88m1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/4PTG3Z6ehGkBFwjybzWkR8?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
     </main>
     <footer>
         <a href="https://github.com/Renzios">Github</a>
